ie_um/src/main/java/com/example/ie_um/global/error/dto/ErrorResponse.java
package com.example.ie_um.global.error.dto;

public record ErrorResponse(
    int statusCode,
    String message
) {

}
